--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+
+# Custom Folders/Files
+
+# legacy codes
+src/legacy
+
+# requirements lock files
+requirements.lock
+requirements-dev.lock
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
